[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libgarib"
version = "0.0.1"
dependencies = [
    "capstone",
    "construct",
    "jmespath",
    "kaitaistruct",
    "lxml",
    "numpy",
    "pillow",
    "pygltflib",
    "unicorn",
    "pyyaml",
]

[tool.setuptools.package-data]
libgarib = ["parsers/*.rng"]